# django-querysets

./: manage.py  pyproject.toml
blog/: _generate_test_data.py  generate_test_data.py  models.py  playground.py
blog/migrations/: 0001_initial.py  0002_alter_article_published_date.py  0003_tag.py  0004_alter_tag_name.py  0005_formation.py
django_querysets/: asgi.py  settings.py  urls.py  wsgi.py
