[tool.poetry]
name = "django-querysets"
version = "0.1.0"
description = ""
authors = ["Thibault Houdon <houdon.thibault@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
